load("@rules_scala//scala:scala.bzl", "scala_binary", "scala_library", "scala_test")

package(
    default_visibility = ["//dicer:internal"],
)

scala_library(
    name = "load_measurement",
    srcs = ["src/LoadMeasurement.scala"],
    visibility = ["//dicer:internal"],
)

scala_library(
    name = "client_type",
    srcs = ["src/ClientType.scala"],
    visibility = ["//dicer:internal"],
)

scala_library(
    name = "target_name",
    srcs = ["src/TargetName.scala"],
    visibility = ["//dicer:internal"],
    deps = ["//dicer/external:conf"],
)

scala_library(
    name = "generation",
    srcs = ["src/Generation.scala"],
    visibility = ["//dicer:internal"],
    deps = [
        "//caching/util:unix_time_version",
        "//dicer/common/proto:common_proto_scala_lib",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "sliceset_impl",
    srcs = ["src/SliceSetImpl.scala"],
    visibility = ["//dicer:internal"],
    deps = [
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
    ],
)

scala_library(
    name = "assignment_core",
    srcs = [
        "src/Assignment.scala",
        "src/AssignmentFormatter.scala",
        "src/CommonSlicez.scala",
        "src/DiffAssignment.scala",
        "src/ProposedAssignment.scala",
        "src/SliceAssignment.scala",
        "src/SliceMapHelper.scala",
        "src/SubsliceAnnotation.scala",
        "src/SubsliceAnnotationsMap.scala",
        "src/Transfer.scala",
    ],
    visibility = ["//dicer:internal"],
    deps = [
        ":generation",
        ":load_measurement",
        ":slice_helper",
        ":sliceset_impl",
        ":zpage_helpers",
        "//caching/util:ascii_table",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:typed_clock",
        "//caching/util:unix_time_version",
        "//caching/util:watch_cell",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend/proto:friend_protolib",
        "//dicer/friend:mutable_slice_map",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/logging",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_lihaoyi_geny_2_12",
        "@maven//:com_lihaoyi_scalatags_2_12",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "dpage_view_helpers",
    srcs = ["src/DPageViewHelpers.scala"],
    visibility = ["//dicer:internal"],
    deps = [
        ":assignment_core",
        ":generation",
        "//caching/util:unix_time_version",
        "//dicer/common/proto:dpage_proto_scala_lib",
        "//dicer/external:external_common",
        "//dicer/friend:squid",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "client_request",
    srcs = ["src/ClientRequest.scala"],
    visibility = ["//dicer:internal"],
    deps = [
        ":assignment_core",
        ":client_type",
        ":generation",
        ":load_measurement",
        ":slice_helper",
        ":target_helper",
        ":target_unmarshaller",
        ":version",
        ":watch_server_helper",
        "//caching/util:prefix_logger",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:squid",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "subscriber_handler",
    srcs = ["src/SubscriberHandler.scala"],
    visibility = ["//dicer:internal"],
    deps = [
        ":assignment_core",
        ":client_request",
        ":client_type",
        ":generation",
        ":target_helper",
        ":watch_server_helper",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:ticker_time",
        "//caching/util:watch_cell",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:squid",
        "//wrappers/instrumentation:scaffeine-cache-exporter",
        "//wrappers/rpc:rpc_context",
        "//wrappers/rpc:service_identity",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_github_ben_manes_caffeine_caffeine",
        "@maven//:com_github_blemale_scaffeine_2_12",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_prometheus_simpleclient",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "version",
    srcs = ["src/Version.scala"],
    visibility = ["//dicer:internal"],
    deps = [
        ":target_helper",
        "//caching/util:build_info",
        "//caching/util:prefix_logger",
        "//dicer/external:conf",
        "@maven//:io_prometheus_simpleclient",
    ],
)

scala_library(
    name = "slicekey_helper",
    srcs = ["src/SliceKeyHelper.scala"],
    deps = [
        "//dicer/external:external_common",
        "//wrappers/rpc:rich_scalapb",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "slice_helper",
    srcs = ["src/SliceHelper.scala"],
    deps = [
        "//dicer/external:external_common",
        "//dicer/friend/proto:friend_protolib",
        "//wrappers/rpc:rich_scalapb",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "target_helper",
    srcs = ["src/TargetHelper.scala"],
    deps = [
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:conf",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "target_unmarshaller",
    srcs = ["src/TargetUnmarshaller.scala"],
    deps = [
        ":target_helper",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:conf",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "common_ssl_conf",
    srcs = ["src/CommonSslConf.scala"],
    exports = ["//wrappers/rpc:rpc_tls"],
    deps = [
        "//wrappers/conf:dbconf",
        "//wrappers/rpc:rpc_ssl",
        "//wrappers/rpc:rpc_tls",
    ],
)

scala_library(
    name = "internal_client_conf",
    srcs = ["src/InternalClientConf.scala"],
    deps = ["//wrappers/conf:dbconf"],
)

scala_library(
    name = "watch_server_helper",
    srcs = ["src/WatchServerHelper.scala"],
    deps = [
        ":common_ssl_conf",
        ":watch_server_conf",
        "//caching/util:byte_size",
        "//caching/util:generic_rpc_service_builder",
        "//dicer/common/proto:common_proto_scala_lib",
        "//wrappers/rpc:rpc_context",
        "//wrappers/rpc:rpc_server",
        "//wrappers/util:scheduled_executor",
        "@maven//:io_grpc_grpc_api",
    ],
)


scala_library(
    name = "watch_server_conf",
    srcs = ["src/WatchServerConf.scala"],
    exports = ["//wrappers/conf:server-conf"],
    deps = [
        "//wrappers/conf:server-conf",
        "//wrappers/rpc:rpc_server",
    ],
)

scala_library(
    name = "zpage_helpers",
    srcs = [
        "src/SlicezKeyTracker.scala",
        "src/ZPageHelpers.scala",
    ],
    visibility = ["//dicer:caching"],
    deps = [
        "//caching/util:sequential_execution_context",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//wrappers/instrumentation",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:com_lihaoyi_geny_2_12",
        "@maven//:com_lihaoyi_scalatags_2_12",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "etcd_client_helper",
    srcs = ["src/EtcdClientHelper.scala"],
    deps = [
        ":generation",
        "//caching/util:etcd_client",
        "//caching/util:unix_time_version",
    ],
)

scala_library(
    name = "etcd_bootstrapper",
    srcs = ["src/EtcdBootstrapper.scala"],
    visibility = ["//dicer:internal"],
    deps = [
        ":generation",
        "//caching/util:etcd_client",
        "//caching/util:prefix_logger",
        "//caching/util:server_conf",
        "//caching/util:unix_time_version",
        "//wrappers/conf:core",
        "//wrappers/conf:project",
        "//wrappers/rpc:rpc_context",
        "//wrappers/rpc:rpc_server",
        "//wrappers/util:executor",
        "@maven//:io_grpc_grpc_api",
    ],
)

scala_library(
    name = "test_common",
    srcs = [
        "test/SubscriberHandlerMetricUtils.scala",
        "test/TestSliceUtils.scala",
    ],
    exports = [
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
    testonly = True,
    deps = [
        ":assignment_core",
        ":slice_helper",
        ":subscriber_handler",
        ":test_environment",
        "//caching/util:ascii_table",
        "//caching/util:metric_utils",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/assigner/algorithm",
        "//dicer/assigner/algorithm:load_map",
        "//dicer/assigner/config:internal_target_config",
        "//dicer/assigner:assigner_slicez",
        "//dicer/assigner:assignment_stats",
        "//dicer/client:clerk_impl",
        "//dicer/client:slicelet_impl",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/common:generation",
        "//dicer/common:target_helper",
        "//dicer/external:clerk",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/rpc:rich_scalapb",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@maven//:io_prometheus_simpleclient",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "test_environment",
    srcs = ["test/InternalDicerTestEnvironment.scala"],
    data = [
        "//dicer/assigner:advanced_target_config",
        "//dicer/external/config:target_config",
    ],
    exports = [":test_assigner"],
    testonly = True,
    visibility = [
        "//caching/util:__pkg__",
        "//dicer:internal",
    ],
    deps = [
        ":client_request",
        ":test_assigner",
        "//caching/util:assert_macros",
        "//caching/util:config_scope",
        "//caching/util:etcd_client",
        "//caching/util:etcd_test_env",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:lock",
        "//caching/util:sequential_execution_context",
        "//caching/util:server_conf",
        "//caching/util:test_utils",
        "//dicer/assigner",
        "//dicer/assigner/config:config_provider",
        "//dicer/assigner/config:internal_target_config_map",
        "//dicer/assigner:assigner_conf",
        "//dicer/assigner:assigner_slicez",
        "//dicer/assigner:etcd_preferred_assigner_driver",
        "//dicer/assigner:interposing_preferred_assigner",
        "//dicer/assigner:preferred_assigner_driver",
        "//dicer/assigner:testable_assigner_conf",
        "//dicer/client:slicelet_impl",
        "//dicer/client:test_client",
        "//dicer/common:assignment_core",
        "//dicer/external:clerk",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/common/status:status",
        "//wrappers/conf:core",
        "//wrappers/conf:current_project",
        "//wrappers/conf:project",
        "//wrappers/conf:project-conf",
        "//wrappers/conf:server-conf",
        "//wrappers/rpc:client",
        "//wrappers/rpc:readiness_probe_tracker",
        "//wrappers/rpc:rpc_server",
        "@maven//:com_google_code_findbugs_jsr305",
    ],
)

scala_library(
    name = "interceptable_store",
    srcs = ["test/InterceptableStore.scala"],
    testonly = True,
    deps = [
        "//caching/util:sequential_execution_context",
        "//caching/util:watch_cell",
        "//dicer/assigner:store_interface",
        "//dicer/common:assignment_core",
        "//dicer/common:generation",
        "//dicer/external:clerk",
        "//dicer/external:slicelet",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "test_assigner",
    srcs = ["test/TestAssigner.scala"],
    exports = [
        "//dicer/assigner",
        "//dicer/assigner:etcd_preferred_assigner_driver",
        "//dicer/assigner:preferred_assigner_driver",
    ],
    testonly = True,
    visibility = [
        "//caching/util:__pkg__",
        "//dicer:internal",
    ],
    deps = [
        ":interceptable_store",
        "//caching/util:etcd_client",
        "//caching/util:etcd_test_env",
        "//caching/util:fake_proxy",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:lock",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:server_conf",
        "//caching/util:state_machine",
        "//caching/util:test_utils",
        "//caching/util:ticker_time",
        "//caching/util:watch_cell",
        "//dicer/assigner",
        "//dicer/assigner/config:config_provider",
        "//dicer/assigner/config:internal_target_config_map",
        "//dicer/assigner/proto:preferred_assigner_protolib",
        "//dicer/assigner:assigner_conf",
        "//dicer/assigner:assigner_rpc_test_helper",
        "//dicer/assigner:assigner_slicez",
        "//dicer/assigner:assignment_generator_driver",
        "//dicer/assigner:disabled_preferred_assigner_driver",
        "//dicer/assigner:etcd_preferred_assigner_driver",
        "//dicer/assigner:etcd_preferred_assigner_store",
        "//dicer/assigner:etcd_store",
        "//dicer/assigner:generator",
        "//dicer/assigner:in_memory_store",
        "//dicer/assigner:interposing_preferred_assigner",
        "//dicer/assigner:kubernetes_membership_checker",
        "//dicer/assigner:kubernetes_target_watcher",
        "//dicer/assigner:preferred_assigner_driver",
        "//dicer/assigner:preferred_assigner_value",
        "//dicer/assigner:store_interface",
        "//dicer/assigner:testable_assigner_conf",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common:assignment_core",
        "//dicer/common:client_request",
        "//dicer/common:generation",
        "//dicer/common:target_unmarshaller",
        "//dicer/external:clerk",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/conf:core",
        "//wrappers/conf:current_project",
        "//wrappers/conf:dbconf",
        "//wrappers/conf:project",
        "//wrappers/conf:project-conf",
        "//wrappers/conf:server-conf",
        "//wrappers/logging",
        "//wrappers/rpc:client",
        "//wrappers/rpc:rpc_context",
        "//wrappers/rpc:rpc_testing",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_typesafe_config",
    ],
)

scala_library(
    name = "dicer_env_lib",
    srcs = ["test/TestEnvironmentMain.scala"],
    testonly = True,
    visibility = ["//dicer:caching"],
    deps = [
        ":test_assigner",
        ":test_environment",
        "//caching/util:assert_macros",
        "//caching/util:sequential_execution_context",
        "//dicer/assigner/config:internal_target_config_map",
        "//dicer/assigner:assigner_slicez",
        "//dicer/client:slicelet_impl",
        "//dicer/client:test_client",
        "//dicer/common:target_helper",
        "//dicer/external:clerk",
        "//dicer/external:dicer_test_env",
        "//dicer/external:slicelet",
        "//wrappers/conf:constants",
        "//wrappers/instrumentation:info-service",
        "//wrappers/util:databricks_main",
        "@maven//:com_lihaoyi_mainargs_2_12",
    ],
)

scala_binary(
    name = "dicer_env",
    main_class = "com.databricks.dicer.common.TestEnvironmentMain",
    runtime_deps = ["//dicer/resources:log4j_config"],
    testonly = True,
    deps = [":dicer_env_lib"],
)

scala_test(
    name = "assignment_formatter_test",
    srcs = ["test/AssignmentFormatterSuite.scala"],
    data = glob(["test/golden_files/*"]),
    timeout = "short",
    deps = [
        ":assignment_core",
        ":generation",
        ":test_common",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "assignment_test",
    srcs = ["test/AssignmentSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":generation",
        ":slice_helper",
        ":sliceset_impl",
        ":test_common",
        "//caching/util:test_util",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "client_request_test",
    srcs = ["test/ClientRequestSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":client_request",
        ":client_type",
        ":generation",
        ":target_unmarshaller",
        ":test_common",
        "//caching/util:metric_utils",
        "//caching/util:prefix_logger",
        "//caching/util:test_util",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "client_type_test",
    srcs = ["test/ClientTypeSuite.scala"],
    timeout = "short",
    deps = [
        ":client_type",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "common_slicez_test",
    srcs = ["test/CommonSlicezSuite.scala"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":generation",
        ":test_common",
        ":zpage_helpers",
        "//caching/util:test_util",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:com_lihaoyi_geny_2_12",
        "@maven//:com_lihaoyi_scalatags_2_12",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)

scala_test(
    name = "diff_assignment_test",
    srcs = ["test/DiffAssignmentSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":generation",
        ":test_common",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "etcd_bootstrapper_test",
    srcs = ["test/EtcdBootstrapperSuite.scala"],
    timeout = "moderate",
    deps = [
        ":etcd_bootstrapper",
        ":generation",
        "//caching/util:etcd_client",
        "//caching/util:etcd_test_env",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//wrappers/conf:location",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "etcd_client_helper_test",
    srcs = ["test/EtcdClientHelperSuite.scala"],
    timeout = "short",
    deps = [
        ":etcd_client_helper",
        ":generation",
        "//caching/util:etcd_client",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "generation_test",
    srcs = ["test/GenerationSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":generation",
        ":test_common",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "dpage_view_helpers_test",
    srcs = ["test/DPageViewHelpersSuite.scala"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":dpage_view_helpers",
        ":generation",
        ":test_common",
        "//caching/util:unix_time_version",
        "//dicer/assigner/algorithm",
        "//dicer/common/proto:dpage_proto_scala_lib",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "gossip_test",
    srcs = ["test/GossipSuite.scala"],
    timeout = "moderate",
    deps = [
        ":assignment_core",
        ":generation",
        ":test_assigner",
        ":test_common",
        ":test_environment",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:server_conf",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/assigner",
        "//dicer/assigner/config:internal_target_config",
        "//dicer/assigner/config:internal_target_config_map",
        "//dicer/assigner:assigner_conf",
        "//dicer/assigner:assigner_slicez",
        "//dicer/client:clerk_impl",
        "//dicer/client:slicelet_impl",
        "//dicer/external:clerk",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//dicer/external:slicelet",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/conf:core",
        "//wrappers/conf:project",
        "//wrappers/conf:project-conf",
        "//wrappers/rpc:rpc_testing",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:com_typesafe_config",
    ],
)

scala_test(
    name = "internal_dicer_test_env_fake_clock_test",
    srcs = ["test/InternalDicerTestEnvFakeClockSuite.scala"],
    timeout = "moderate",
    deps = [
        ":assignment_core",
        ":generation",
        ":test_environment",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:server_conf",
        "//caching/util:test_util",
        "//caching/util:typed_clock",
        "//caching/util:unix_time_version",
        "//dicer/assigner/config:internal_target_config_map",
        "//dicer/assigner:assigner_conf",
        "//dicer/assigner:assigner_slicez",
        "//dicer/client:clerk_impl",
        "//dicer/client:slicelet_impl",
        "//dicer/external:clerk",
        "//dicer/external:conf",
        "//dicer/external:slicelet",
        "//dicer/friend:squid",
        "//wrappers/conf:core",
        "//wrappers/conf:project-conf",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:com_typesafe_config",
    ],
)

scala_test(
    name = "internal_dicer_test_environment_test",
    srcs = ["test/InternalDicerTestEnvironmentSuite.scala"],
    timeout = "moderate",
    deps = [
        ":assignment_core",
        ":client_request",
        ":generation",
        ":subscriber_handler",
        ":test_common",
        ":test_environment",
        ":version",
        "//caching/util:sequential_execution_context",
        "//caching/util:server_conf",
        "//caching/util:test_util",
        "//caching/util:where_am_i_test_utils",
        "//dicer/assigner",
        "//dicer/assigner/config:internal_target_config_map",
        "//dicer/assigner:assigner_conf",
        "//dicer/assigner:assigner_slicez",
        "//dicer/assigner:assignment_generator_driver",
        "//dicer/assigner:preferred_assigner_value",
        "//dicer/assigner:target_metrics_utils",
        "//dicer/client:clerk_impl",
        "//dicer/client:slicelet_impl",
        "//dicer/external:clerk",
        "//dicer/external:slicelet",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/conf:core",
        "//wrappers/conf:location_test",
        "//wrappers/conf:project-conf",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "//wrappers/util:jsonutil",
        "@maven//:com_typesafe_config",
    ],
)

scala_test(
    name = "proposed_assignment_test",
    srcs = ["test/ProposedAssignmentSuite.scala"],
    timeout = "long",
    deps = [
        ":assignment_core",
        ":generation",
        ":test_common",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/external:external_common",
        "//dicer/friend:mutable_slice_map",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "resource_address_test",
    srcs = ["test/ResourceAddressSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":test_common",
        "//caching/util:test_util",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:external_common",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "slice_assignment_test",
    srcs = ["test/SliceAssignmentSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":generation",
        ":slice_helper",
        ":test_common",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:external_common",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "slice_key_test",
    srcs = ["test/SliceKeySuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":slice_helper",
        ":slicekey_helper",
        ":test_common",
        "//caching/util:metric_utils",
        "//caching/util:test_util",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:external_common",
        "//dicer/friend/proto:friend_protolib",
        "//wrappers/rpc:rich_scalapb",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@maven//:io_prometheus_simpleclient",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "slice_set_test",
    srcs = ["test/SliceSetSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":generation",
        ":slice_helper",
        ":sliceset_impl",
        ":test_common",
        "//caching/util:test_util",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:external_common",
        "//dicer/friend/proto:friend_protolib",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "slice_test",
    srcs = ["test/SliceSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":generation",
        ":slice_helper",
        ":slicekey_helper",
        ":test_common",
        "//caching/util:test_util",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:external_common",
        "//dicer/friend/proto:friend_protolib",
        "//dicer/friend:squid",
        "//wrappers/rpc:rich_scalapb",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "slicez_key_tracker_test",
    srcs = ["test/SlicezKeyTrackerSuite.scala"],
    timeout = "short",
    deps = [
        ":test_common",
        ":zpage_helpers",
        "//caching/util:sequential_execution_context",
        "//caching/util:test_util",
        "//dicer/external:conf",
        "//dicer/external:external_common",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:com_lihaoyi_geny_2_12",
        "@maven//:com_lihaoyi_scalatags_2_12",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)

scala_test(
    name = "slicez_test",
    srcs = ["test/SlicezSuite.scala"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":test_assigner",
        ":test_common",
        ":test_environment",
        ":zpage_helpers",
        "//caching/util:prefix_logger",
        "//caching/util:sequential_execution_context",
        "//caching/util:test_util",
        "//dicer/assigner",
        "//dicer/assigner/config:internal_target_config_map",
        "//dicer/assigner:assigner_slicez",
        "//dicer/client:slicelet_impl",
        "//dicer/client:slicez",
        "//dicer/client:test_client",
        "//dicer/external:clerk",
        "//dicer/external:conf",
        "//dicer/external:slicelet",
        "//dicer/friend:squid",
        "//wrappers/instrumentation",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:org_apache_commons_commons_lang3",
    ],
)

scala_library(
    name = "subscriber_handler_test_base",
    srcs = [
        "test/SubscriberHandlerDriver.scala",
        "test/SubscriberHandlerSuiteBase.scala",
    ],
    testonly = True,
    deps = [
        ":assignment_core",
        ":client_request",
        ":generation",
        ":subscriber_handler",
        ":target_helper",
        ":test_common",
        ":version",
        ":watch_server_helper",
        "//caching/util:metric_utils",
        "//caching/util:status_utils",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:slicelet",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "scala_subscriber_handler_test",
    srcs = ["test/ScalaSubscriberHandlerSuite.scala"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":client_request",
        ":generation",
        ":subscriber_handler",
        ":subscriber_handler_test_base",
        ":test_common",
        "//caching/util:fake_sequential_execution_context",
        "//caching/util:lock",
        "//caching/util:metric_utils",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//caching/util:watch_cell",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:slicelet",
        "//wrappers/rpc:rpc_testing",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
        "@maven//:io_prometheus_simpleclient",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "subslice_annotation_test",
    srcs = ["test/SubsliceAnnotationSuite.scala"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":generation",
        ":test_common",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:external_common",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "subslice_annotations_map_test",
    srcs = ["test/SubsliceAnnotationsMapSuite.scala"],
    timeout = "long",
    deps = [
        ":assignment_core",
        ":generation",
        ":test_common",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/external:external_common",
        "//dicer/friend:mutable_slice_map",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "target_test",
    srcs = ["test/TargetSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":target_helper",
        ":test_common",
        "//caching/util:test_util",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:conf",
        "//wrappers/deployment:infra_data_model_lib",
        "//wrappers/deployment:kubernetes_cluster",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "app_target_test",
    srcs = ["test/AppTargetSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":target_helper",
        ":test_common",
        "//caching/util:test_util",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:conf",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "target_unmarshaller_test",
    srcs = ["test/TargetUnmarshallerSuite.scala"],
    timeout = "short",
    deps = [
        ":target_helper",
        ":target_unmarshaller",
        ":test_common",
        "//caching/util:test_util",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:conf",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "test_environment_main_test",
    srcs = ["test/TestEnvironmentMainSuite.scala"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":dicer_env_lib",
        ":subscriber_handler",
        ":test_common",
        ":test_environment",
        ":version",
        "//caching/util:test_util",
        "//dicer/assigner:assigner_slicez",
        "//dicer/assigner:target_metrics_utils",
        "//dicer/external:conf",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "//wrappers/util:databricks_main",
    ],
)

scala_test(
    name = "test_slice_utils_test",
    srcs = ["test/TestSliceUtilsSuite.scala"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":generation",
        ":test_common",
        "//caching/util:test_util",
        "//caching/util:unix_time_version",
        "//dicer/external:external_common",
        "//dicer/friend:slice_map",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)

scala_test(
    name = "transfer_test",
    srcs = ["test/TransferSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":assignment_core",
        ":generation",
        ":test_common",
        "//caching/util:test_util",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:external_common",
        "//dicer/friend:squid",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_test(
    name = "version_test",
    srcs = ["test/VersionSuite.scala"],
    timeout = "short",
    deps = [
        ":target_helper",
        ":test_common",
        ":version",
        "//caching/util:metric_utils",
        "//caching/util:test_util",
        "//dicer/external:conf",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
        "@maven//:io_prometheus_simpleclient",
    ],
)

scala_test(
    name = "target_helper_test",
    srcs = ["test/TargetHelperSuite.scala"],
    data = ["//dicer/common/test/data"],
    timeout = "short",
    deps = [
        ":target_helper",
        "//caching/util:test_util",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/common/test/proto:test_data_proto_scala_lib",
        "//dicer/external:conf",
        "//wrappers/util:async_test_helpers",
        "//wrappers/util:databricks-test",
    ],
)
