load("@rules_scala//scala:scala.bzl", "scala_library")

package(
    default_visibility = ["//dicer:internal"],
)

scala_library(
    name = "slicelet_accessor",
    srcs = ["src/SliceletAccessor.scala"],
    visibility = ["//visibility:public"],
    deps = [
        ":squid",
        ":state_transfer_common",
        "//dicer/client:slicelet_impl",
        "//dicer/external:slicelet",
    ],
)

scala_library(
    name = "shutdown_hook_constants",
    srcs = ["src/ShutdownHookConstants.scala"],
    visibility = ["//visibility:public"],
    deps = ["//wrappers/util:shutdown-hook-manager"],
)

scala_library(
    name = "slice_accessor",
    srcs = ["src/SliceAccessor.scala"],
    visibility = ["//visibility:public"],
    deps = [
        "//dicer/common:slice_helper",
        "//dicer/external:external_common",
        "//dicer/friend/proto:friend_protolib",
        "//wrappers/rpc:rich_scalapb",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)

scala_library(
    name = "state_transfer_common",
    srcs = ["src/SliceWithStateProvider.scala"],
    visibility = ["//visibility:public"],
    deps = ["//dicer/external:external_common"],
)

scala_library(
    name = "slice_map",
    srcs = ["src/SliceMap.scala"],
    visibility = ["//visibility:public"],
    deps = [
        "//caching/util:assert_macros",
        "//dicer/common:slice_helper",
        "//dicer/external:external_common",
    ],
)

scala_library(
    name = "mutable_slice_map",
    srcs = ["src/MutableSliceMap.scala"],
    visibility = ["//visibility:public"],
    deps = [
        "//dicer/external:external_common",
        "@maven//:com_google_guava_guava",
    ],
)

scala_library(
    name = "squid",
    srcs = ["src/Squid.scala"],
    visibility = ["//dicer:internal"],
    deps = [
        "//caching/util:typed_clock",
        "//dicer/common/proto:common_proto_scala_lib",
        "//dicer/external:external_common",
        "@com_google_protobuf_protobuf_java",
        "@maven//:com_google_guava_guava",
        "@scala_proto_rules_grpc_api",
        "@scala_proto_rules_grpc_netty",
        "@scala_proto_rules_grpc_stub",
        "@scala_proto_rules_scalapb_runtime",
    ],
)
